Tests for resident count
