# mks/swagger.yaml
@@ -48,6 +48,21 @@ paths:
           schema:
             $ref: '#/definitions/brp'
           headers: {}
+  /brp/aantal_inwoners:
+    post:
+      description: Number of residents living on address
+      produces:
+        - application/json
+      responses:
+        200:
+          description: response
+          schema:
+            type: object
+            properties:
+              residentCount:
+                type:
+                  integer
+
 definitions:
   bsn:
     title: bsn
